# rust_sqlx_use_example

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/model/: mod.rs  user.rs
