[package]
name = "rust_sqlx_use_example"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.27", features = ["full"] }
time="0.3"
lazy_static = "1.4"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls","time", "chrono"] }
mysql="24"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
